# Market_maker_ssm_hippo

./: README.md
market_maker_cpp_Bitmex/: CMakeLists.txt
market_maker_cpp_Bitmex/docs/model/: architecture.md  visualization.md
market_maker_cpp_Bitmex/examples/: advanced_training.cpp  basic_usage.cpp
market_maker_cpp_Bitmex/include/market_maker/backtest/: backtest_engine.h
market_maker_cpp_Bitmex/include/market_maker/common/: config.h  types.h
market_maker_cpp_Bitmex/include/market_maker/core/: market_data.h  order.h
market_maker_cpp_Bitmex/include/market_maker/exchange/: bitmex_connector.h  bitmex_execution_manager.h
market_maker_cpp_Bitmex/include/market_maker/model/: channel_attention.h  data_utils.h  hippo_utils.h  losses.h  mamba_block.h  mamba_tvm.h  mamba_tvm_memory.h  mamba_tvm_utils.h  metrics.h  model_args.h  model_utils.h  regularization.h  rms_norm.h  ssm_hippo.h  ssm_layer.h  trainer.h  visualization.h
market_maker_cpp_Bitmex/include/market_maker/risk/: performance_monitor.h  risk_manager.h
market_maker_cpp_Bitmex/include/market_maker/strategy/: Rollercoaster_girls.h  market_maker_strategy.h  stoikov_strategy.h  strategy_manager.h
market_maker_cpp_Bitmex/include/market_maker/utils/: advanced_analytics.h  market_microstructure.h  thread_pool.h
market_maker_cpp_Bitmex/scripts/: build.sh  install_dependencies.sh  test.sh
market_maker_cpp_Bitmex/src/common/: config.cpp
market_maker_cpp_Bitmex/src/market_maker/backtest/: backtest_engine.cpp  order_book_simulator.h
market_maker_cpp_Bitmex/src/market_maker/core/: market_data.cpp  order_manager.cpp  risk_manager.cpp
market_maker_cpp_Bitmex/src/market_maker/exhange/: bitmex_connector.cpp  bitmex_execution_manager.cpp
market_maker_cpp_Bitmex/src/market_maker/model/: channel_attention.cpp  data_utils.cpp  hippo_utils.cpp  mamba_block.cpp  (+7 more)
market_maker_cpp_Bitmex/tests/model/: test_channel_attention.cpp  test_data_utils.cpp  test_hippo.cpp  test_mamba.cpp  test_metrics.cpp  test_trainer.cpp
(+5 files in other folders)
